--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ httplib2==0.9
 oauth2client==1.4.7
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
+pycrunchbase==0.2.5
+requests==2.5.1
 rsa==3.1.4
 simplejson==3.6.5
 six==1.9.0
